-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 17, repo-panama
-
Component/s: tools
-
b28
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8269105 | 18 | Jorn Vernee | P2 | Resolved | Fixed | b03 |
| JDK-8270607 | 17.0.1 | Jorn Vernee | P2 | Resolved | Fixed | b03 |
Upstream the fix JDK-8268673 to the mainline JDK repo.
- backported by
-
JDK-8269105 Upstream: 8268673: Stack walk across optimized entry frame on fresh native thread fails
-
- Resolved
-
-
JDK-8270607 Upstream: 8268673: Stack walk across optimized entry frame on fresh native thread fails
-
- Resolved
-
- relates to
-
JDK-8268673 Stack walk across optimized entry frame on fresh native thread fails
-
- Resolved
-
-
JDK-8269240 java/foreign/stackwalk/TestAsyncStackWalk.java test failed with concurrent GC
-
- Closed
-
(1 links to)